<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="wrap.wrap302_p07_client.MainActivity">

    <TextView
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/enter_room_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:ems="10"
        android:id="@+id/main_room_code_edtTxt"
        android:textAlignment="center"
        />

    <Button
        android:text="@string/join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_join_game_button"/>

    <TextView
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/string_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:text="@string/create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/number_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/main_num_players_edtTxt"
        android:textAlignment="center"/>

    <Button
        android:text="@string/create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_create_game_button"
        android:textAlignment="center"/>

</LinearLayout>
