<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="wrap.wrap302_p07_client.LobbyActivity">

    <TextView
        android:text="@string/room_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"/>

    <TextView
        android:text="AAAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lobby_room_code_txt"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/string_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lobby_player_listview"
        android:layout_weight="1"/>

    <Button
        android:text="@string/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lobby_start_game_btn"
        android:textAlignment="center"/>

    <TextView
        android:text="@string/start_early"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lobby_bottom_txt"
        android:textAlignment="center"/>
</LinearLayout>
